--- a/index.html
+++ b/index.html
@@ -70,51 +70,49 @@
     </section>
 
     <!-- ===== Skills Section ===== -->
-    <section class="skills" id="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li>AutoCAD, Solidworks, Inventor and drafting software.</li>
-            <li>Architectural and mechanical drafting.</li>
-            <li>3D modeling and 3D printing.</li>
-            <li>Microsoft Office (Word, Excel, PowerPoint)</li>
-            <li>Canva design.</li>
-            <li>Python programming basics</li>
-            <li>Maya experience.</li>
-            <li>Blender experience.</li>
-            <li>Entrepreneurship skills.</li>
-        </ul>
-    </section>
+<section class="skills" id="skills">
+    <h2>Skills</h2>
+    <ul>
+        <li>Architectural and mechanical drafting using AutoCAD, SolidWorks, and Inventor.</li>
+        <li>3D modeling and animation with Maya and Blender; experience with 3D printing.</li>
+        <li>Microsoft Office Suite (Word, Excel, PowerPoint).</li>
+        <li>Canva design and basic graphic editing.</li>
+        <li>Basic Python programming.</li>
+        <li>Bilingual: [Your languages, e.g., English and Spanish].</li>
+        <li>Currently learning IT fundamentals and technologies.</li>
+        <li>Entrepreneurship and leadership skills.</li>
+    </ul>
+</section>
 
-    <!-- ===== Education Section ===== -->
-    <section class="education" id="education">
-        <h2>Education & Certificates</h2>
-        <ul>
-            <li>CTC Certificate — Computerized Drafting Technology.</li>
-            <li>EEA Certificate — Emerging Entrepreneur Academy.</li>
-            <li>Microsoft Office Certificate — Dual Enrollment.</li>
-            <li>Python Certificate — Dual Enrollment.</li>
-            <li>OSHA 10-hour Construction Certificate.</li>
-        </ul>
-    </section>
+<!-- ===== Education Section ===== -->
+<section class="education" id="education">
+    <h2>Education & Certificates</h2>
+    <ul>
+        <li>CTC Certificate — Computerized Drafting Technology</li>
+        <li>EEA Certificate — Emerging Entrepreneur Academy</li>
+        <li>Microsoft Office Certificate — Dual Enrollment</li>
+        <li>Python Certificate — Dual Enrollment</li>
+        <li>OSHA 10-Hour Construction Certificate</li>
+    </ul>
+</section>
 
-    <!-- ===== Experience Section ===== -->
-    <section class="experience" id="experience">
-        <h2>Experience</h2>
-        <ul>
-            <li>Link Crew Leader helping freshmen during senior year.</li>
-            <li>Member of SkillsUSA.</li>
-            <li>Marketing intern at Emerging Entrepreneur Academy.
-            <li>Mentor at Emerging Entrepreneur Academy.</li>
-            <li>Member of HBA student chapter, helped restore a home.</li>
-        </ul>
-    </section>
+<!-- ===== Experience Section ===== -->
+<section class="experience" id="experience">
+    <h2>Experience</h2>
+    <ul>
+        <li>Marketing Team Member at Emerging Entrepreneur Academy — invited to join officially after starting as an intern; contribute to content creation, branding, social media, and outreach strategies.</li>
+        <li>Link Crew Leader – supported freshmen transition during senior year through mentoring and school events.</li>
+        <li>Member of SkillsUSA – participated in career development competitions and team projects.</li>
+        <li>HBA Student Chapter – contributed to a community home restoration project as part of hands-on construction experience.</li>
+    </ul>
+</section>
+
 
     <!-- ===== Contact Section ===== -->
     <section class="contact" id="contact">
         <h2 style="text-align: center; font-size: 4rem; color: #F7ADC3;">Contact Me</h2>
         <p style="text-align: center; font-size: 1.8rem; margin-top: 2rem;">
             Feel free to reach out via email at <a href="mailto:keylacoto2777@gmail.com" style="color: #F7ADC3;">keylacoto2777@gmail.com</a>
-            or connect through any of my social media platforms above.
         </p>
     </section>
 
