--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <li>Microsoft Office Suite (Word, Excel, PowerPoint).</li>
         <li>Canva design and basic graphic editing.</li>
         <li>Basic Python programming.</li>
-        <li>Bilingual: [Your languages, e.g., English and Spanish].</li>
+        <li>Bilingual:English and Spanish.</li>
         <li>Currently learning IT fundamentals and technologies.</li>
         <li>Entrepreneurship and leadership skills.</li>
     </ul>
@@ -100,10 +100,10 @@
 <section class="experience" id="experience">
     <h2>Experience</h2>
     <ul>
-        <li>Marketing Team Member at Emerging Entrepreneur Academy — invited to join officially after starting as an intern; contribute to content creation, branding, social media, and outreach strategies.</li>
+        <li>Marketing Team Member at Emerging Entrepreneur Academy — invited to join officially after starting as an intern; contribute to content creation, social media, and outreach strategies.</li>
         <li>Link Crew Leader – supported freshmen transition during senior year through mentoring and school events.</li>
-        <li>Member of SkillsUSA – participated in career development competitions and team projects.</li>
-        <li>HBA Student Chapter – contributed to a community home restoration project as part of hands-on construction experience.</li>
+        <li>Member of SkillsUSA – participated in team projects.</li>
+        <li>HBA Student – contributed to a community home restoration project as part of hands-on construction experience.</li>
     </ul>
 </section>
 
