--- a/index.html
+++ b/index.html
@@ -78,9 +78,11 @@
         <li>Microsoft Office Suite (Word, Excel, PowerPoint).</li>
         <li>Canva design and basic graphic editing.</li>
         <li>Basic Python programming.</li>
+        <li>Able to work effectively in both team environments and independently.</li>
         <li>Bilingual:English and Spanish.</li>
-        <li>Currently learning IT fundamentals and technologies.</li>
         <li>Entrepreneurship and leadership skills.</li>
+        <li>Currently learning IT fundamentals and technologies.</li>
+        <li>Currently learning HTML/CSS.</li>
     </ul>
 </section>
 
@@ -93,6 +95,8 @@
         <li>Microsoft Office Certificate — Dual Enrollment</li>
         <li>Python Certificate — Dual Enrollment</li>
         <li>OSHA 10-Hour Construction Certificate</li>
+        <li>High school diploma-2025 graduated</li>
+        <li>Currently pursuing B.S. in Computer Information Systems — Started 2025</li>
     </ul>
 </section>
 
